--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "node-osc": "^2.0.4",
     "serialport": "^7.1.4",
     "socket.io": "^2.2.0",
-    "tone": "^13.4.9"
+    "tone": "^13.4.9",
+    "webcamjs": "^1.0.25"
   }
 }
